resolving some issues related to inngest

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shantanu-jha-1831/talent-IQ.git"
+    "url": "git+https://github.com/shantanu-jha-1831/Pair-IQ"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/shantanu-jha-1831/talent-IQ/issues"
+    "url": "https://github.com/shantanu-jha-1831/Pair-IQ/issues"
   },
-  "homepage": "https://github.com/shantanu-jha-1831/talent-IQ#readme",
+  "homepage": "https://github.com/shantanu-jha-1831/Pair-IQ#readme",
   "description": ""
 }
